# reddit-discord-alert

./: .env.default  README.md  pyproject.toml  requirements.txt
app/: discord_handler.py  main.py  monitor.py
