[tool.poetry]
name = "reddit-discord-webhook"
version = "0.1.0"
description = ""
authors = ["Nate Shoffner <nate.shoffner@gmail.com>"]
readme = "README.md"
packages = [{include = "reddit_discord_webhook"}]

[tool.poetry.dependencies]
python = "^3.10"
cachetools = "^5.3.2"
python-dotenv = "^1.0.0"
asyncpraw = "^7.7.1"
nest-asyncio = "^1.5.8"
discord-webhook = {extras = ["async"], version = "^1.3.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
